# CMakeTemplate

./: CMakeLists.txt  README.md  main.cpp
configure/: about.txt  config.h.in
src/: main.cpp
src/shared/: greeting.cpp  greeting.h
test/: CMakeLists.txt  greeting_test.cpp
